--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Test with pytest and codecov
       run: |
         export PYTHONPATH=src/
-        pytest --cov-report xml:cov.xml term-missing --cov=src test/
+        pytest --cov-report xml:cov.xml --cov=src test/
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v2
       with:
